// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: for project 1`] = `
<header
  className="top-bar-outer"
>
  <div
    className="top-bar"
  >
    <div
      className="top-bar-inner bordered-bottom big-padded-top padded-bottom"
    >
      <h1
        className="page-title"
      >
        project_settings.page
      </h1>
      <div
        className="page-description spacer-top"
      >
        project_settings.page.description
      </div>
      <withRouter(SettingsSearch)
        className="big-spacer-top"
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        definitions={[]}
      />
    </div>
  </div>
</header>
`;

exports[`should render correctly: global 1`] = `
<header
  className="top-bar-outer"
>
  <div
    className="top-bar"
  >
    <div
      className="top-bar-inner bordered-bottom big-padded-top padded-bottom"
    >
      <h1
        className="page-title"
      >
        settings.page
      </h1>
      <div
        className="page-description spacer-top"
      >
        <InstanceMessage
          message="settings.page.description"
        />
      </div>
      <withRouter(SettingsSearch)
        className="big-spacer-top"
        definitions={[]}
      />
    </div>
  </div>
</header>
`;
